# pygrader

./: .buildinfo  .dockerignore  .gitignore  .pylintrc  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.web  README.md  build-n-run.ps1  build-n-run.sh  checks.html  checks_dev.html  config.html  dev_guide.html  entrypoint.sh  functionality.html  genindex.html  grader.checks.html  grader.html  grader.utils.html  index.html  install.html  justfile  main.py  modules.html  mypy.ini  objects.inv  py-modindex.html  pygrader-web.py  pygrader.py  pyproject.toml  requirements-prod.txt  requirements-web.txt  requirements.txt  ruff.toml  run  run.ps1  search.html  searchindex.js  (+2 more)
.doctrees/: checks.doctree  checks_dev.doctree  config.doctree  dev_guide.doctree  environment.pickle  functionality.doctree  grader.checks.doctree  grader.doctree  grader.utils.doctree  index.doctree  install.doctree  modules.doctree  usage.doctree  utils.doctree
.github/actions/: docs.yml
.github/prompts/: prompt.prompt.md
.github/workflows/: cicd.yml  docker.yml  docs.yml  lint.yml  pr.yml  python.yml  tests.yml
_modules/: index.html
_sources/: dev_guide.rst.txt  grader.rst.txt
config/: 2024.json  2025-hw3.pylintrc  environment.json  full.json  full_single_point.json  grader_requirements.txt  mypy_type_hints_2024.ini  only_pylint.json  project_structure.json  project_structure.yml  projects_2025.json  pygrader-sample-project-structure.json  pygrader-sample-project.json  structure.json  templates_example.json  tests.json
desktop/: __init__.py  cli.py  main.py  results_reporter.py
docs/diagrams/: class.puml  class_dependency.puml  deployment.puml  module_dependency.puml
docs/source/: conf.py  config.rst  functionality.rst  grader.checks.rst  grader.rst  grader.utils.rst  index.rst  modules.rst
grader/: __init__.py  grader.py
grader/checks/: __init__.py  abstract_check.py  checks_factory.py  coverage_check.py  pylint.py  pylint_check.py  requirements_check.py  run_tests_check.py  structure_check.py  tests_check.py  type_hints_check.py
grader/utils/: __init__.py  cli.py  config.py  constants.py  cove_config.py  environment.py  external_resources.py  files.py  json_with_templates.py  logger.py  process.py  results_reporter.py  structure_validator.py  virtual_environment.py
hw2-config/assets/: first.txt  second.txt
hw3-config/: pygrader_config_public_local.json  pygrader_structure.json
hw3-config/tests_public/: test_unit.py
tests/: __init__.py  mypy_sample_linecount.txt  sample_code_tests.py  test_abstract_check.py  test_checks_factory.py  test_cli.py  test_config.py  test_coverage_check.py  test_environment.py  test_external_resources.py  test_files.py  test_functional.py  test_grader.py  test_json_with_templates.py  test_main.py  test_process.py  test_pylint_check.py  test_requirements_check.py  test_structure_check.py  test_structure_validator.py  test_tests_check.py  test_type_hints_check.py  test_virtual_environment.py
tests/functional/: __init__.py  test_functional.py  test_wheel.py
tests/sample_project/: main.py  sample_code.py
tests/unit/: __init__.py  test_abstract_check.py  test_checks_factory.py  test_cli.py  test_config.py  test_coverage_check.py  test_environment.py  test_external_resources.py  test_files.py  test_grader.py  test_json_with_templates.py  test_main.py  test_process.py  (+7 more)
utils/: setup_cove.py
web/: constants.py  main.py  utils.py
(+20 files in other folders)
