[project]
name = "pygrader"
version = "1.11.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "py-cove @ git+https://github.com/lyubolp/py-cove.git",
    "pylint>=4.0.2",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "types-requests>=2.32.4.20250913",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[tool.setuptools]
# List only the directory/package you want to include
packages = ["grader", "grader.checks", "grader.utils", "config"]

[tool.setuptools.package-data]
config = ["grader_requirements.txt", "mypy_type_hints_2024.ini", "2024.pylintrc"]

[tool.complexipy]
paths = ["grader", "tests", "desktop", "web"]
max-complexity-allowed = 15
quiet = false
sort = "asc"
details = "low"

[tool.complexipy.output]
json = true

[tool.uv.sources]
py-cove = { git = "https://github.com/lyubolp/py-cove", rev = "v1.4.0" }

[dependency-groups]
dev = [
    "complexipy>=4.2.0",
    "coverage>=7.11.3",
    "flake8>=7.3.0",
    "mypy>=1.18.2",
    "myst-parser>=4.0.1",
    "ruff>=0.15.18",
    "sphinx>=8.1.3",
    "sphinx-autodoc2>=0.4.2",
    "sphinx-rtd-theme>=3.0.2",
    "sphinx-rtd-theme-ext-color-contrast>=0.3.2",
]
